GitVersion1/objects/CDH_Account__c.object
<CustomObject>
    <description>To be Removed - Account object for the CAN Data Hub</description>
    <fields>
        <fullName>CDH_Account_Name__c</fullName>
        <description>Account Name from SFDC Account record</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDH_BPKIND__c</fullName>
        <label>BPKIND</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFN</fullName>
                </value>
                <value>
                    <fullName>CPN</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_Business__c</fullName>
        <label>Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_CAN_Business__c</fullName>
        <label>CAN Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>CFN</fullName>
                </value>
                <value>
                    <fullName>CPN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Country_Code__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CDH_Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>PH</fullName>
                </value>
                <value>
                    <fullName>PL</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>VN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Phillapines</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Viet Nam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_External_Record_num__c</fullName>
        <externalId>true</externalId>
        <label>External Record #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_External_System__c</fullName>
        <label>External System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PROS</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_Golden_Record__c</fullName>
        <displayFormat>GR-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Golden Record #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CDH_Legal_Name__c</fullName>
        <description>Legal Entity Name -&gt; From Account Record</description>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Link_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link CDH Record to Commercial Customer</description>
        <label>Link to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CDH_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDH_Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CDH_Parent_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDH_Postal__c</fullName>
        <label>Postal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Primary_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that corresponds to the owner of the actual account (i.e. territory)</description>
        <label>Primary Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CDH_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDH_Primary_Segment_Step_1__c</fullName>
        <description>Temporary field to list the primary Segment on import</description>
        <label>Primary Segment (Step 1)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aiden</fullName>
                </value>
                <value>
                    <fullName>Baxter</fullName>
                </value>
                <value>
                    <fullName>Dennis</fullName>
                </value>
                <value>
                    <fullName>Kobe</fullName>
                </value>
                <value>
                    <fullName>Mila</fullName>
                </value>
                <value>
                    <fullName>Noah</fullName>
                </value>
                <value>
                    <fullName>Sonya</fullName>
                </value>
                <value>
                    <fullName>Spence</fullName>
                </value>
                <value>
                    <fullName>Walton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_Primary_Step_2__c</fullName>
        <description>Temporary field to hold the primary data on import</description>
        <label>Primary Step 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--Not Defined--</fullName>
                </value>
                <value>
                    <fullName>1 - Large/Extensive</fullName>
                </value>
                <value>
                    <fullName>2 - Medium/Extensive</fullName>
                </value>
                <value>
                    <fullName>3 - Large/Selected</fullName>
                </value>
                <value>
                    <fullName>4 - Medium/Selected</fullName>
                </value>
                <value>
                    <fullName>5 - Large/Limited</fullName>
                </value>
                <value>
                    <fullName>6 - Medium/Limited</fullName>
                </value>
                <value>
                    <fullName>7 - Small/Extensive</fullName>
                </value>
                <value>
                    <fullName>8 - Small/Selected</fullName>
                </value>
                <value>
                    <fullName>9 - Small/Limited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Search_Term__c</fullName>
        <description>Used to allow for easier searching... Especially with Cyrillic characters</description>
        <label>Search Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Segment_Step_1__c</fullName>
        <label>Segment (Step 1)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aiden</fullName>
                </value>
                <value>
                    <fullName>Baxter</fullName>
                </value>
                <value>
                    <fullName>Dennis</fullName>
                </value>
                <value>
                    <fullName>Kobe</fullName>
                </value>
                <value>
                    <fullName>Mila</fullName>
                </value>
                <value>
                    <fullName>Noah</fullName>
                </value>
                <value>
                    <fullName>Sonya</fullName>
                </value>
                <value>
                    <fullName>Spence</fullName>
                </value>
                <value>
                    <fullName>Walton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_StateRegion__c</fullName>
        <label>State/Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CDH_Country__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_State_Region_Code__c</fullName>
        <label>State/Region Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CDH_StateRegion__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_Step_2__c</fullName>
        <label>Step 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Territory_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Territory</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a Primary Territory</errorMessage>
            <filterItems>
                <field>CDH_Territory__c.CDH_Primary__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a Primary Territory</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CDH_Territory__c</referenceTo>
        <relationshipName>CDH_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDH_Territory__c</fullName>
        <label>External Territory Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_VAT_Number_2__c</fullName>
        <label>VAT Number 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_VAT_Number__c</fullName>
        <label>VAT Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Territory_Name__c</fullName>
        <formula>CDH_Territory_Lookup__r.CDH_Territory_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Territory Name</label>
        <type>Text</type>
    </fields>
    <label>CDH Account - To be Removed</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CDH_Account_Name__c</columns>
        <columns>CDH_Business__c</columns>
        <columns>CDH_CAN_Business__c</columns>
        <columns>CDH_Link_to_Account__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CDH-{000000}</displayFormat>
        <label>CDH Account #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CDH Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>